protocols/tests/identities/identity_d2/two_fork_err.out
error: Thread 0 (transaction 'two_fork_err') attempted to fork more than once
   ┌─ identities/identity_d2/identity_d2.prot:24:3
   │
24 │   fork();
   │   ^^^^^^^ Thread 0 (transaction 'two_fork_err') attempted to fork more than once

